--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "format": "prettier --write \"**/*.{ts,tsx,md}\""
   },
   "devDependencies": {
+    "firebase-tools": "^10.0.1",
     "prettier": "^2.5.1",
     "turbo": "latest"
   },
