--- a/functions/package.json
+++ b/functions/package.json
@@ -7,16 +7,29 @@
     "shell": "npm run build && firebase functions:shell",
     "start": "npm run shell",
     "deploy": "firebase deploy --only functions",
-    "logs": "firebase functions:log"
+    "logs": "firebase functions:log",
+    "preinstall": "node scripts/vendorDependencies.js"
   },
   "engines": {
     "node": "16"
   },
   "main": "lib/index.js",
   "dependencies": {
+    "config": "file:./vendor/config",
     "firebase-admin": "^10.0.1",
-    "firebase-functions": "^3.16.0"
+    "firebase-functions": "^3.16.0",
+    "fp-ts": "^2.11.7",
+    "io-ts": "^2.2.16",
+    "io-ts-validate": "file:./vendor/io-ts-validate",
+    "pirojok": "file:./vendor/pirojok",
+    "tsconfig": "file:./vendor/tsconfig"
   },
+  "vendoredDependencies": [
+    "config",
+    "tsconfig",
+    "io-ts-validate",
+    "pirojok"
+  ],
   "devDependencies": {
     "@typescript-eslint/eslint-plugin": "^3.10.1",
     "@typescript-eslint/parser": "^3.10.1",
